--- a/master/templates/master/customer.html
+++ b/master/templates/master/customer.html
@@ -4,7 +4,8 @@
 
 <a class="btn btn-primary" href="{% url 'newcustomer' %}" role="button">Add New Customer</a> <hr/>
 
-<table class="table table-dark">
+<table class="table">
+  <thead class="thead-light">
   <thead>
     <tr>
       <th scope="col">Customer Id</th>
