--- a/master/templates/master/item.html
+++ b/master/templates/master/item.html
@@ -1,10 +1,10 @@
 {% extends 'base.html' %}
 {% block content %}
 
-<a class="btn btn-primary" href="{% url 'newitem' %}" role="button">Add New Customer</a> <hr/>
+<a class="btn btn-primary" href="{% url 'newitem' %}" role="button">Add New Item</a> <hr/>
 
-<table class="table table-dark">
-  <thead>
+<table class="table">
+  <thead class="thead-light">
     <tr>
       <th scope="col">Item Id</th>
       <th scope="col">Item Name</th>
