--- a/master/templates/master/supplier.html
+++ b/master/templates/master/supplier.html
@@ -4,8 +4,8 @@
 
 <a class="btn btn-primary" href="{% url 'newsupplier' %}" role="button">Add New supplier</a> <hr/>
 
-<table class="table table-dark">
-  <thead>
+<table class="table">
+  <thead class="thead-light">
     <tr>
       <th scope="col">Supplier Id</th>
       <th scope="col">Supplier Name</th>
