--- a/material_transaction/templates/material/purchase_order_list.html
+++ b/material_transaction/templates/material/purchase_order_list.html
@@ -4,8 +4,8 @@
 
 <a class="btn btn-primary" href="{% url 'purchase' %}" role="button">Add New item</a> <hr/>
 
-<table class="table table-dark">
-  <thead>
+<table class="table">
+  <thead class="thead-light">
     <tr>
       <th scope="col">Purchase Id</th>
       <th scope="col">Raw Item Name</th>
