--- a/material_transaction/templates/material/stock.html
+++ b/material_transaction/templates/material/stock.html
@@ -1,10 +1,10 @@
-{% extends 'base.html' %}
+<!-- {% extends 'base.html' %}
 
 {% block content %}
 
 
-<table class="table table-dark">
-  <thead>
+<table class="table">
+  <thead class="thead-light">
     <tr>
       <th scope="col">Raw Item Name</th>
       <th scope="col"> total Quantity</th>
@@ -22,4 +22,4 @@
     {% endfor %}
   </tbody>
 </table> 
-{% endblock %}
+{% endblock %} -->
