--- a/production/templates/production/dispatch.html
+++ b/production/templates/production/dispatch.html
@@ -2,8 +2,8 @@
 
 {% block content %}
 <h3> <center> Packed Items </center> </h3><br>
-<table class="table table-dark">
-  <thead>
+<table class="table">
+  <thead class="thead-light">
     <tr>
       <th scope="col">ID</th>
       <th scope="col">Production Date</th>
