--- a/production/templates/production/workorder.html
+++ b/production/templates/production/workorder.html
@@ -2,8 +2,8 @@
 
 {% block content %}
 <a class="btn btn-primary" href="{% url 'new_workorder' %}" role="button">Add New Workorder</a> <hr/>
-<table class="table table-dark">
-  <thead>
+<table class="table">
+  <thead class="thead-light">
     <tr>
       <th scope="col">ID</th>
       <th scope="col">Item</th>
