--- a/report/templates/report/dispatch_report.html
+++ b/report/templates/report/dispatch_report.html
@@ -1,7 +1,10 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<h3> <center> Dispatched-list </center> </h3><br>
+
+<!-- {{ purchase_bill.id }}
+ -->
+<h3> <center> Dispatched List </center> </h3><br>
 <table class="table">
   <thead class="thead-light">
     <tr>
@@ -13,8 +16,9 @@
     </tr>
   </thead>
   <tbody>
-{% for detail in dispatched %}
-    <tr>
+	{% if p_report %}
+	{% for detail in p_report %}
+	    <tr>
       <th scope="row"> {{ detail.item }}</th>
       <td>{{ detail.dispatched_date }}</td>
       <td>{{ detail.Workorder_id.Select_customer }}</td>
@@ -22,7 +26,8 @@
       <td>{{ detail.Workorder_id.total }}</td>
       <td><a class="btn btn-link" href="{% url 'dispatch_bill' pk=detail.pk %}"> Print </a>
     </tr>
-    {% endfor %}
+     {% endfor %}
+    {% endif %}
   </tbody>
 </table> 
 {% endblock %}
