--- a/material_transaction/templates/material/raw-item-master.html
+++ b/material_transaction/templates/material/raw-item-master.html
@@ -18,7 +18,7 @@
   <tbody>
 {% for detail in rawitem %}
     <tr>
-      <th scope="row"> {{ detail.id }}</th>
+      <th scope="row"> {{ detail.itemcode }}</th>
       <td>{{ detail.item_name }}</td>
       <td>{{ detail.rate }}</td>
       <td>{{ detail.description }}</td>
