--- a/master/templates/master/newcustomer.html
+++ b/master/templates/master/newcustomer.html
@@ -10,6 +10,22 @@
     <li class="breadcrumb-item active" aria-current="page">Add Customer</li>
   </ol>
 </nav>
+<!-- {% if form.errors %}
+    {% for field in form %}
+        {% for error in field.errors %}
+            <div class="alert alert-danger">
+                <strong>{{ error|escape }}</strong>
+            </div>
+        {% endfor %}
+    {% endfor %}
+    {% for error in form.non_field_errors %}
+        <div class="alert alert-danger">
+            <strong>{{ error|escape }}</strong>
+        </div>
+    {% endfor %}
+{% endif %} -->
+
+
  <form method=POST>
     <div style="color:black;" class="col-md-4">
     {% csrf_token %}
