--- a/production/templates/production/print1.html
+++ b/production/templates/production/print1.html
@@ -33,12 +33,12 @@ Invoice
 <div class="col-sm-6">
 <h6 class="mb-3">To:</h6>
 <div>
-<strong>Bob Mart</strong>
+<strong>Vinod Textiles</strong>
 </div>
-<div>Attn: Daniel Marek</div>
-<div>43-190 Mikolow, Poland</div>
-<div>Email: marek@daniel.com</div>
-<div>Phone: +48 123 456 789</div>
+<div>Shop No: 231, Sonar galli </div>
+<div>Vadgoan, Belgaum</div>
+<div>Email: vinodtextiles@gmail.com</div>
+<div>Phone: +91 8971811084</div>
 </div>
 
 
